--- a/FuriganaConverter/kanji/KanjiTextViewController.xib
+++ b/FuriganaConverter/kanji/KanjiTextViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,28 +22,40 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sSf-qU-szB">
-                    <rect key="frame" x="0.0" y="52" width="414" height="764"/>
+                    <rect key="frame" x="0.0" y="52" width="414" height="736"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0fi-ny-nUz">
-                    <rect key="frame" x="176" y="824" width="62" height="30"/>
-                    <state key="normal" title="貼り付け"/>
+                    <rect key="frame" x="16" y="804" width="382" height="50"/>
+                    <color key="backgroundColor" name="Primary"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="cTN-Bd-pzQ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                    <state key="normal" title="漢字を貼り付ける">
+                        <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0fi-ny-nUz" secondAttribute="trailing" constant="16" id="HPX-wY-o8I"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="sSf-qU-szB" secondAttribute="trailing" id="LuK-3F-zZp"/>
-                <constraint firstItem="0fi-ny-nUz" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="NhP-at-OVp"/>
-                <constraint firstItem="0fi-ny-nUz" firstAttribute="top" secondItem="sSf-qU-szB" secondAttribute="bottom" constant="8" symbolic="YES" id="inM-p0-bCt"/>
+                <constraint firstItem="0fi-ny-nUz" firstAttribute="top" secondItem="sSf-qU-szB" secondAttribute="bottom" constant="16" id="inM-p0-bCt"/>
                 <constraint firstItem="sSf-qU-szB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="pid-gC-JhQ"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="0fi-ny-nUz" secondAttribute="bottom" constant="8" id="qeb-Bb-wW6"/>
+                <constraint firstItem="0fi-ny-nUz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="u0w-0p-4f4"/>
                 <constraint firstItem="sSf-qU-szB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="u3m-7e-ecl"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="132" y="126"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="Primary">
+            <color red="1" green="0.75294117647058822" blue="0.79607843137254897" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
